# Software-Renderer

./: CMakeLists.txt  CMakePresets.json
include/: canvas.h  color_rgba.h  light.h  raytracer.h  renderer.h  scene.h  sphere.h  vector3.h
src/: canvas.cpp  main.cpp  raytracer.cpp  renderer.cpp  scene.cpp
